--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
+    "jest": "^24.0.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^18.4.1",
     "react-dom": "^16.7.0",
     "react-modal": "^3.8.1",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.2.1",
