--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
+    "build": "webpack -p --env production",
     "dev-server-babel": "babel src/index.js -o public/scripts/bundle.js --presets env,react --watch",
-    "serve": "live-server public"
+    "serve": "live-server public",
+    "test": "jest --config=jest.config.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -20,11 +22,16 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
-    "jest": "^24.0.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jest": "^23.6.0",
     "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
+    "raf": "^3.4.1",
     "react": "^16.7.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^18.4.1",
@@ -32,6 +39,7 @@
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
