--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev-server": "webpack-dev-server --mode development",
     "build": "webpack -p --env production",
     "dev-server-babel": "babel src/index.js -o public/scripts/bundle.js --presets env,react --watch",
-    "serve": "live-server public",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build"
@@ -24,13 +23,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0",
     "enzyme-to-json": "^3.3.5",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "jest": "^23.6.0",
-    "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
@@ -42,13 +37,18 @@
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.2.1",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^2.0.14"
+  },
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.7.0",
     "webpack-dev-server": "^3.1.14"
   }
 }
